Meeting, MeetingRoom, Localization, Resources funcionando.

--- a/MScheduler/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/MScheduler/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -118,6 +118,21 @@ manageMeetings.form.inicio = início
 manageMeetings.form.Inicio.placeholder = Full Name of the Meeting
 manageMeetings.form.inicio.placeholder = Full name of the Meeting
 manageMeetings.form.title = Meeting registration form
+manageMeetings.form.Theme = Theme
+manageMeetings.form.theme = theme
+manageMeetings.form.theme.placeholder = theme
+manageMeetings.form.initialDate = Initial Date
+manageMeetings.form.initialdate = initial date
+manageMeetings.form.initialDate.placeholder = Initial Date
+manageMeetings.form.endDate = End Date
+manageMeetings.form.enddate = end date
+manageMeetings.form.endDate.plaaceholder = End Date 
+manageMeetings.form.Requester = Requester
+manageMeetings.form.requester = requester
+manageMeetings.form.Requester.placeholder = Requester
+manageMeetings.form.Room = Room
+manageMeetings.form.room = room
+manageMeetings.form.Room.placeholder = Room
 
 # Text for use case "Manage Meeting Rooms":
 manageMeetingRooms.title = Manage Meeting Rooms
