Bugs da versão anterior corrigidos.

--- a/MScheduler/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/MScheduler/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -133,6 +133,8 @@ manageMeetings.form.Requester.placeholder = Requester
 manageMeetings.form.Room = Room
 manageMeetings.form.room = room
 manageMeetings.form.Room.placeholder = Room
+manageMeetings.form.Participants = Participants
+manageMeetings.form.participants = participants
 
 # Text for use case "Manage Meeting Rooms":
 manageMeetingRooms.title = Manage Meeting Rooms
